20251007 v0.0.56 Fixed Footer Visibility

--- a/public/style.css
+++ b/public/style.css
@@ -1341,7 +1341,7 @@ li {
     display: flex; 
 }
 
-#fixed-footer-links-container.hidden {
+#fixed-footer-links-container.hidden, #undoBtn.hidden, #endGameBtn.hidden {
     display: none; 
 }
 
